# cmputils

./: CMakeLists.txt  README.md
cython/: CMakeLists.txt  cmputils_module.pyx  setup.py
include/cmputils/: dtw.h
src/: cuda_utils.h  dtw_cpu.cpp  dtw_gpu.cu
test/: CMakeLists.txt  DTWTests.cpp  vector_a.h  vector_b.h
